[package]
name = 'substrate-test-utils'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'Apache-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Substrate test utilities'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.3.16'
substrate-test-utils-derive = { path = './derive', version = '0.10.0-dev' }
tokio = { features = ['macros', 'time'], version = '1.17.0' }

[dev-dependencies]
sc-service = { path = '../client/service', version = '0.10.0-dev' }
trybuild = { features = [ 'diff' ], version = '1.0.53' }
