[package]
name = 'sc-authority-discovery'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
build = 'build.rs'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Substrate authority discovery.'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
prost-build = '0.9'

[dependencies]
async-trait = '0.1'
codec = { default-features = false, package = 'parity-scale-codec', version = '3.0.0' }
futures = '0.3.21'
futures-timer = '3.0.1'
ip_network = '0.4.1'
libp2p = { default-features = false, features = ['kad'], version = '0.44.0' }
log = '0.4.16'
prometheus-endpoint = { package = 'substrate-prometheus-endpoint', path = '../../utils/prometheus', version = '0.10.0-dev' }
prost = '0.9'
rand = '0.7.2'
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-network = { path = '../network', version = '0.10.0-dev' }
sp-api = { path = '../../primitives/api', version = '4.0.0-dev' }
sp-authority-discovery = { path = '../../primitives/authority-discovery', version = '4.0.0-dev' }
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-keystore = { path = '../../primitives/keystore', version = '0.12.0' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
thiserror = '1.0'

[dev-dependencies]
quickcheck = '1.0.3'
sp-tracing = { path = '../../primitives/tracing', version = '5.0.0' }
substrate-test-runtime-client = { path = '../../test-utils/runtime/client', version = '2.0.0' }
