[package]
name = 'sc-basic-authorship'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Basic implementation of block-authoring logic.'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0' }
futures = '0.3.21'
futures-timer = '3.0.1'
log = '0.4.16'
prometheus-endpoint = { package = 'substrate-prometheus-endpoint', path = '../../utils/prometheus', version = '0.10.0-dev' }
sc-block-builder = { path = '../block-builder', version = '0.10.0-dev' }
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-proposer-metrics = { path = '../proposer-metrics', version = '0.10.0-dev' }
sc-telemetry = { path = '../telemetry', version = '4.0.0-dev' }
sc-transaction-pool-api = { path = '../../client/transaction-pool/api', version = '4.0.0-dev' }
sp-api = { path = '../../primitives/api', version = '4.0.0-dev' }
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-consensus = { path = '../../primitives/consensus/common', version = '0.10.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-inherents = { path = '../../primitives/inherents', version = '4.0.0-dev' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }

[dev-dependencies]
parking_lot = '0.12.0'
sc-transaction-pool = { path = '../transaction-pool', version = '4.0.0-dev' }
substrate-test-runtime-client = { path = '../../test-utils/runtime/client', version = '2.0.0' }
