[package]
name = 'beefy-gadget'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
repository = 'https://github.com/paritytech/substrate'
description = 'BEEFY Client gadget for substrate'
homepage = 'https://substrate.io'

[dependencies]
beefy-primitives = { path = '../../primitives/beefy', version = '4.0.0-dev' }
codec = { features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
fnv = '1.0.6'
futures = '0.3'
futures-timer = '3.0.1'
hex = '0.4.2'
log = '0.4'
parking_lot = '0.12.0'
prometheus = { package = 'substrate-prometheus-endpoint', path = '../../utils/prometheus', version = '0.10.0-dev' }
sc-chain-spec = { path = '../../client/chain-spec', version = '4.0.0-dev' }
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-finality-grandpa = { path = '../../client/finality-grandpa', version = '0.10.0-dev' }
sc-keystore = { path = '../keystore', version = '4.0.0-dev' }
sc-network = { path = '../network', version = '0.10.0-dev' }
sc-network-gossip = { path = '../network-gossip', version = '0.10.0-dev' }
sc-utils = { path = '../utils', version = '4.0.0-dev' }
sp-api = { path = '../../primitives/api', version = '4.0.0-dev' }
sp-application-crypto = { path = '../../primitives/application-crypto', version = '6.0.0' }
sp-arithmetic = { path = '../../primitives/arithmetic', version = '5.0.0' }
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-consensus = { path = '../../primitives/consensus/common', version = '0.10.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-keystore = { path = '../../primitives/keystore', version = '0.12.0' }
sp-mmr-primitives = { path = '../../primitives/merkle-mountain-range', version = '4.0.0-dev' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
thiserror = '1.0'
wasm-timer = '0.2.5'

[dev-dependencies]
sc-consensus = { path = '../consensus/common', version = '0.10.0-dev' }
sc-network-test = { path = '../network/test', version = '0.8.0' }
serde = '1.0.136'
sp-finality-grandpa = { path = '../../primitives/finality-grandpa', version = '4.0.0-dev' }
sp-keyring = { path = '../../primitives/keyring', version = '6.0.0' }
sp-tracing = { path = '../../primitives/tracing', version = '5.0.0' }
strum = { features = ['derive'], version = '0.23' }
substrate-test-runtime-client = { path = '../../test-utils/runtime/client', version = '2.0.0' }
tempfile = '3.1.0'
tokio = '1.15'
