[package]
name = 'sc-block-builder'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Substrate block builder'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { features = [
	'derive',
], package = 'parity-scale-codec', version = '3.0.0' }
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sp-api = { path = '../../primitives/api', version = '4.0.0-dev' }
sp-block-builder = { path = '../../primitives/block-builder', version = '4.0.0-dev' }
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-inherents = { path = '../../primitives/inherents', version = '4.0.0-dev' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
sp-state-machine = { path = '../../primitives/state-machine', version = '0.12.0' }

[dev-dependencies]
substrate-test-runtime-client = { path = '../../test-utils/runtime/client' }
