[package]
name = 'sc-chain-spec'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Substrate chain configurations.'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0' }
impl-trait-for-tuples = '0.2.2'
memmap2 = '0.5.0'
sc-chain-spec-derive = { path = './derive', version = '4.0.0-dev' }
sc-network = { path = '../network', version = '0.10.0-dev' }
sc-telemetry = { path = '../telemetry', version = '4.0.0-dev' }
serde = { features = ['derive'], version = '1.0.136' }
serde_json = '1.0.79'
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
