[package]
name = 'sc-cli'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
description = 'Substrate CLI interface.'
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
chrono = '0.4.10'
clap = { features = ['derive'], version = '3.1.6' }
fdlimit = '0.2.1'
futures = '0.3.21'
hex = '0.4.2'
libp2p = '0.44.0'
log = '0.4.16'
names = { default-features = false, version = '0.13.0' }
parity-scale-codec = '3.0.0'
rand = '0.7.3'
regex = '1.5.5'
rpassword = '5.0.0'
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-client-db = { path = '../db', version = '0.10.0-dev' }
sc-keystore = { path = '../keystore', version = '4.0.0-dev' }
sc-network = { path = '../network', version = '0.10.0-dev' }
sc-service = { default-features = false, path = '../service', version = '0.10.0-dev' }
sc-telemetry = { path = '../telemetry', version = '4.0.0-dev' }
sc-tracing = { path = '../tracing', version = '4.0.0-dev' }
sc-utils = { path = '../utils', version = '4.0.0-dev' }
serde = '1.0.136'
serde_json = '1.0.79'
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-keyring = { path = '../../primitives/keyring', version = '6.0.0' }
sp-keystore = { path = '../../primitives/keystore', version = '0.12.0' }
sp-panic-handler = { path = '../../primitives/panic-handler', version = '4.0.0' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
sp-version = { path = '../../primitives/version', version = '5.0.0' }
thiserror = '1.0.30'
tiny-bip39 = '0.8.2'
tokio = { features = ['signal', 'rt-multi-thread', 'parking_lot'], version = '1.17.0' }

[dev-dependencies]
tempfile = '3.1.0'

[features]
wasmtime = ['sc-service/wasmtime']
