[package]
name = 'sc-client-db'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Client backend that uses RocksDB database as storage.'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { features = [
	'derive',
], package = 'parity-scale-codec', version = '3.0.0' }
hash-db = '0.15.2'
kvdb = '0.11.0'
kvdb-memorydb = '0.11.0'
kvdb-rocksdb = { optional = true, version = '0.15.2' }
linked-hash-map = '0.5.4'
log = '0.4.16'
parity-db = { optional = true, version = '0.3.9' }
parking_lot = '0.12.0'
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-state-db = { path = '../state-db', version = '0.10.0-dev' }
sp-arithmetic = { path = '../../primitives/arithmetic', version = '5.0.0' }
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-database = { path = '../../primitives/database', version = '4.0.0-dev' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
sp-state-machine = { path = '../../primitives/state-machine', version = '0.12.0' }
sp-trie = { path = '../../primitives/trie', version = '6.0.0' }

[dev-dependencies]
kvdb-rocksdb = '0.15.1'
quickcheck = '1.0.3'
sp-tracing = { path = '../../primitives/tracing', version = '5.0.0' }
substrate-test-runtime-client = { path = '../../test-utils/runtime/client', version = '2.0.0' }
tempfile = '3'

[features]
default = []
test-helpers = []
runtime-benchmarks = []
with-kvdb-rocksdb = ['kvdb-rocksdb']
with-parity-db = ['parity-db']
