[package]
name = 'sc-executor'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'A crate that provides means of executing/dispatching calls into the runtime.'
documentation = 'https://docs.rs/sc-executor'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0' }
lazy_static = '1.4.0'
lru = '0.7.5'
parking_lot = '0.12.0'
sc-executor-common = { path = 'common', version = '0.10.0-dev' }
sc-executor-wasmi = { path = 'wasmi', version = '0.10.0-dev' }
sc-executor-wasmtime = { optional = true, path = 'wasmtime', version = '0.10.0-dev' }
sp-api = { path = '../../primitives/api', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-core-hashing-proc-macro = { path = '../../primitives/core/hashing/proc-macro', version = '5.0.0' }
sp-externalities = { path = '../../primitives/externalities', version = '0.12.0' }
sp-io = { path = '../../primitives/io', version = '6.0.0' }
sp-panic-handler = { path = '../../primitives/panic-handler', version = '4.0.0' }
sp-runtime-interface = { path = '../../primitives/runtime-interface', version = '6.0.0' }
sp-tasks = { path = '../../primitives/tasks', version = '4.0.0-dev' }
sp-trie = { path = '../../primitives/trie', version = '6.0.0' }
sp-version = { path = '../../primitives/version', version = '5.0.0' }
sp-wasm-interface = { path = '../../primitives/wasm-interface', version = '6.0.0' }
tracing = '0.1.29'
wasmi = '0.9.1'

[dev-dependencies]
criterion = '0.3'
env_logger = '0.9'
hex-literal = '0.3.4'
paste = '1.0'
regex = '1.5.5'
sc-runtime-test = { path = 'runtime-test', version = '2.0.0' }
sc-tracing = { path = '../tracing', version = '4.0.0-dev' }
sp-maybe-compressed-blob = { path = '../../primitives/maybe-compressed-blob', version = '4.1.0-dev' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
sp-state-machine = { path = '../../primitives/state-machine', version = '0.12.0' }
substrate-test-runtime = { path = '../../test-utils/runtime', version = '2.0.0' }
tracing-subscriber = '0.2.19'
wat = '1.0'

[[bench]]
name = 'bench'
harness = false

[features]
default = ['std']
std = []
wasm-extern-trace = []
wasmtime = ['sc-executor-wasmtime']
wasmi-errno = ['wasmi/errno']
wasmer-sandbox = ['sc-executor-common/wasmer-sandbox']
