[package]
name = 'sc-finality-grandpa'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Integration of the GRANDPA finality gadget into substrate.'
documentation = 'https://docs.rs/sc-finality-grandpa'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
ahash = '0.7.6'
async-trait = '0.1.50'
dyn-clone = '1.0'
finality-grandpa = { features = ['derive-codec'], version = '0.15.0' }
fork-tree = { path = '../../utils/fork-tree', version = '3.0.0' }
futures = '0.3.21'
futures-timer = '3.0.1'
hex = '0.4.2'
log = '0.4.16'
parity-scale-codec = { features = ['derive'], version = '3.0.0' }
parking_lot = '0.12.0'
prometheus-endpoint = { package = 'substrate-prometheus-endpoint', path = '../../utils/prometheus', version = '0.10.0-dev' }
rand = '0.8.4'
sc-block-builder = { path = '../block-builder', version = '0.10.0-dev' }
sc-chain-spec = { path = '../../client/chain-spec', version = '4.0.0-dev' }
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-consensus = { path = '../consensus/common', version = '0.10.0-dev' }
sc-keystore = { path = '../keystore', version = '4.0.0-dev' }
sc-network = { path = '../network', version = '0.10.0-dev' }
sc-network-gossip = { path = '../network-gossip', version = '0.10.0-dev' }
sc-telemetry = { path = '../telemetry', version = '4.0.0-dev' }
sc-utils = { path = '../utils', version = '4.0.0-dev' }
serde_json = '1.0.79'
sp-api = { path = '../../primitives/api', version = '4.0.0-dev' }
sp-application-crypto = { path = '../../primitives/application-crypto', version = '6.0.0' }
sp-arithmetic = { path = '../../primitives/arithmetic', version = '5.0.0' }
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-consensus = { path = '../../primitives/consensus/common', version = '0.10.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-finality-grandpa = { path = '../../primitives/finality-grandpa', version = '4.0.0-dev' }
sp-keystore = { path = '../../primitives/keystore', version = '0.12.0' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
thiserror = '1.0'

[dev-dependencies]
assert_matches = '1.3.0'
finality-grandpa = { features = [
	'derive-codec',
	'test-helpers',
], version = '0.15.0' }
sc-network = { path = '../network', version = '0.10.0-dev' }
sc-network-test = { path = '../network/test', version = '0.8.0' }
serde = '1.0.136'
sp-keyring = { path = '../../primitives/keyring', version = '6.0.0' }
sp-tracing = { path = '../../primitives/tracing', version = '5.0.0' }
substrate-test-runtime-client = { path = '../../test-utils/runtime/client', version = '2.0.0' }
tempfile = '3.1.0'
tokio = '1.17.0'
