[package]
name = 'sc-informant'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
description = 'Substrate informant.'
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
ansi_term = '0.12.1'
futures = '0.3.21'
futures-timer = '3.0.1'
log = '0.4.16'
parity-util-mem = { default-features = false, features = ['primitive-types'], version = '0.11.0' }
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-network = { path = '../network', version = '0.10.0-dev' }
sc-transaction-pool-api = { path = '../transaction-pool/api', version = '4.0.0-dev' }
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
