[package]
description = 'Substrate offchain workers'
name = 'sc-offchain'
version = '4.0.0-dev'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
bytes = '1.1'
codec = { features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
fnv = '1.0.6'
futures = '0.3.21'
futures-timer = '3.0.2'
hex = '0.4'
hyper = { features = ['stream', 'http2'], version = '0.14.16' }
hyper-rustls = '0.22.1'
num_cpus = '1.13'
once_cell = '1.8'
parking_lot = '0.12.0'
rand = '0.7.2'
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-network = { path = '../network', version = '0.10.0-dev' }
sc-utils = { path = '../utils', version = '4.0.0-dev' }
sp-api = { path = '../../primitives/api', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-offchain = { path = '../../primitives/offchain', version = '4.0.0-dev' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
threadpool = '1.7'
tracing = '0.1.29'

[dev-dependencies]
lazy_static = '1.4.0'
sc-block-builder = { path = '../block-builder', version = '0.10.0-dev' }
sc-client-db = { default-features = true, path = '../db', version = '0.10.0-dev' }
sc-transaction-pool = { path = '../transaction-pool', version = '4.0.0-dev' }
sc-transaction-pool-api = { path = '../transaction-pool/api', version = '4.0.0-dev' }
sp-consensus = { path = '../../primitives/consensus/common', version = '0.10.0-dev' }
sp-tracing = { path = '../../primitives/tracing', version = '5.0.0' }
substrate-test-runtime-client = { path = '../../test-utils/runtime/client', version = '2.0.0' }
tokio = '1.17.0'

[features]
default = []
