[package]
name = 'sc-rpc-api'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Substrate RPC interfaces.'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0' }
futures = '0.3.21'
jsonrpc-core = '18.0.0'
jsonrpc-core-client = '18.0.0'
jsonrpc-derive = '18.0.0'
jsonrpc-pubsub = '18.0.0'
log = '0.4.16'
parking_lot = '0.12.0'
sc-chain-spec = { path = '../chain-spec', version = '4.0.0-dev' }
sc-transaction-pool-api = { path = '../transaction-pool/api', version = '4.0.0-dev' }
scale-info = { default-features = false, features = ['derive'], version = '2.0.1' }
serde = { features = ['derive'], version = '1.0.136' }
serde_json = '1.0.79'
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-rpc = { path = '../../primitives/rpc', version = '6.0.0' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
sp-tracing = { path = '../../primitives/tracing', version = '5.0.0' }
sp-version = { path = '../../primitives/version', version = '5.0.0' }
thiserror = '1.0'
