[package]
name = 'sc-rpc'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Substrate Client RPC'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0' }
futures = '0.3.21'
hash-db = { default-features = false, version = '0.15.2' }
jsonrpc-pubsub = '18.0.0'
lazy_static = { optional = true, version = '1.4.0' }
log = '0.4.16'
parking_lot = '0.12.0'
rpc = { package = 'jsonrpc-core', version = '18.0.0' }
sc-block-builder = { path = '../block-builder', version = '0.10.0-dev' }
sc-chain-spec = { path = '../chain-spec', version = '4.0.0-dev' }
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-rpc-api = { path = '../rpc-api', version = '0.10.0-dev' }
sc-tracing = { path = '../tracing', version = '4.0.0-dev' }
sc-transaction-pool-api = { path = '../transaction-pool/api', version = '4.0.0-dev' }
sc-utils = { path = '../utils', version = '4.0.0-dev' }
serde_json = '1.0.79'
sp-api = { path = '../../primitives/api', version = '4.0.0-dev' }
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-keystore = { path = '../../primitives/keystore', version = '0.12.0' }
sp-offchain = { path = '../../primitives/offchain', version = '4.0.0-dev' }
sp-rpc = { path = '../../primitives/rpc', version = '6.0.0' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
sp-session = { path = '../../primitives/session', version = '4.0.0-dev' }
sp-version = { path = '../../primitives/version', version = '5.0.0' }

[dev-dependencies]
assert_matches = '1.3.0'
lazy_static = '1.4.0'
sc-network = { path = '../network', version = '0.10.0-dev' }
sc-transaction-pool = { path = '../transaction-pool', version = '4.0.0-dev' }
sp-consensus = { path = '../../primitives/consensus/common', version = '0.10.0-dev' }
sp-io = { path = '../../primitives/io', version = '6.0.0' }
substrate-test-runtime-client = { path = '../../test-utils/runtime/client', version = '2.0.0' }

[features]
test-helpers = ['lazy_static']
