[package]
name = 'sc-state-db'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'State database maintenance. Handles canonicalization and pruning in the database.'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
log = '0.4.16'
parity-util-mem = { default-features = false, features = ['primitive-types'], version = '0.11.0' }
parity-util-mem-derive = '0.1.0'
parking_lot = '0.12.0'
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
