[package]
name = 'sc-sync-state-rpc'
version = '0.10.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
description = 'A RPC handler to create sync states for light clients.'
edition = '2021'
license = 'Apache-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0' }
jsonrpc-core = '18.0.0'
jsonrpc-core-client = '18.0.0'
jsonrpc-derive = '18.0.0'
sc-chain-spec = { path = '../chain-spec', version = '4.0.0-dev' }
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-consensus-babe = { path = '../consensus/babe', version = '0.10.0-dev' }
sc-consensus-epochs = { path = '../consensus/epochs', version = '0.10.0-dev' }
sc-finality-grandpa = { path = '../finality-grandpa', version = '0.10.0-dev' }
serde = { features = ['derive'], version = '1.0.136' }
serde_json = '1.0.79'
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
thiserror = '1.0.30'
