[package]
name = 'sc-sysinfo'
version = '6.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'A crate that provides basic hardware and software telemetry information.'
documentation = 'https://docs.rs/sc-sysinfo'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.3.19'
libc = '0.2'
log = '0.4.16'
rand = '0.7.3'
rand_pcg = '0.2.1'
regex = '1'
sc-telemetry = { path = '../telemetry', version = '4.0.0-dev' }
serde = { features = ['derive'], version = '1.0.136' }
serde_json = '1.0.79'
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-io = { path = '../../primitives/io', version = '6.0.0' }
sp-std = { path = '../../primitives/std', version = '4.0.0' }
