[package]
name = 'sc-tracing'
version = '4.0.0-dev'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Instrumentation implementation for substrate.'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
ansi_term = '0.12.1'
atty = '0.2.13'
chrono = '0.4.19'
lazy_static = '1.4.0'
libc = '0.2.121'
log = { version = '0.4.16' }
once_cell = '1.8.0'
parking_lot = '0.12.0'
regex = '1.5.5'
rustc-hash = '1.1.0'
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-rpc-server = { path = '../rpc-servers', version = '4.0.0-dev' }
sc-tracing-proc-macro = { path = './proc-macro', version = '4.0.0-dev' }
serde = '1.0.136'
sp-api = { path = '../../primitives/api', version = '4.0.0-dev' }
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-rpc = { path = '../../primitives/rpc', version = '6.0.0' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
sp-tracing = { path = '../../primitives/tracing', version = '5.0.0' }
thiserror = '1.0.30'
tracing = '0.1.29'
tracing-log = { features = ['interest-cache'], version = '0.1.3' }
tracing-subscriber = { features = ['parking_lot'], version = '0.2.25' }

[dev-dependencies]
criterion = '0.3'

[[bench]]
name = 'bench'
harness = false
