[package]
name = 'sc-transaction-pool'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Substrate transaction pool implementation.'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0' }
futures = '0.3.21'
futures-timer = '3.0.2'
linked-hash-map = '0.5.4'
log = '0.4.16'
parity-util-mem = { default-features = false, features = ['primitive-types'], version = '0.11.0' }
parking_lot = '0.12.0'
prometheus-endpoint = { package = 'substrate-prometheus-endpoint', path = '../../utils/prometheus', version = '0.10.0-dev' }
retain_mut = '0.1.4'
sc-client-api = { path = '../api', version = '4.0.0-dev' }
sc-transaction-pool-api = { path = './api', version = '4.0.0-dev' }
sc-utils = { path = '../utils', version = '4.0.0-dev' }
serde = { features = ['derive'], version = '1.0.136' }
sp-api = { path = '../../primitives/api', version = '4.0.0-dev' }
sp-blockchain = { path = '../../primitives/blockchain', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-runtime = { path = '../../primitives/runtime', version = '6.0.0' }
sp-tracing = { path = '../../primitives/tracing', version = '5.0.0' }
sp-transaction-pool = { path = '../../primitives/transaction-pool', version = '4.0.0-dev' }
thiserror = '1.0.30'

[dev-dependencies]
assert_matches = '1.3.0'
criterion = '0.3'
hex = '0.4'
sc-block-builder = { path = '../block-builder', version = '0.10.0-dev' }
sp-consensus = { path = '../../primitives/consensus/common', version = '0.10.0-dev' }
substrate-test-runtime = { path = '../../test-utils/runtime', version = '2.0.0' }
substrate-test-runtime-client = { path = '../../test-utils/runtime/client', version = '2.0.0' }
substrate-test-runtime-transaction-pool = { path = '../../test-utils/runtime/transaction-pool', version = '2.0.0' }

[[bench]]
name = 'basics'
harness = false
